Add link for Duane's stuff

--- a/index.html
+++ b/index.html
@@ -1,2 +1,15 @@
-<a href="seq">Here</a>.
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>
+      </title>
+  </head>
+  <body>
+    <ul>
+      <li><a href="seq">My Csound-powered Sequencer (only runs in Chrome)</a></li>
+      <li><a href="duane">My son Duane's stuff</a>
+    </ul>
+  </body>
+</html>
+
 
