--- a/duane/index.html
+++ b/duane/index.html
@@ -4,7 +4,10 @@
   <title>Duane's page</title>
 </head>
 <body>
-  <h1>I like trains</h1>
-  <h1>Henry sucks</h1>
-</body>
+  <ul>
+    <li>This is a list</li>
+    <li>Here is another item</li>
+    <li>... and another</li>
+  </ul>
+  </body>
 </html>
