--- a/duane/index.html
+++ b/duane/index.html
@@ -8,6 +8,7 @@
     <li>This is a list</li>
     <li>Here is another item</li>
     <li>... and another</li>
+    <li>... and yet another</li>
   </ul>
   </body>
 </html>
