Added VSCode API Index

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   </head>
   <body>
     <ul>
-      <li><a href="seq">My Csound-powered Sequencer (only runs in Chrome)</a></li>
-      <li><a href="duane">My son Duane's stuff</a>
+      <li><a href="seq">My Csound-powered Sequencer</a> (only runs in Chrome, 
+        using PNaCl which is now not enabled by default)</li>
+      <li><a href="vscode_api_index">VSCode API Quick Links</a></li>
+      <li><a href="duane">My son Duane's stuff</a></li>
     </ul>
   </body>
 </html>
