--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
   </head>
   <body>
     <ul>
-      <li><a href="seq">My Csound-powered Sequencer</a> (only runs in Chrome, 
+      <li><a href="seq">My Csound-powered Sequencer</a> (only runs in Chrome,
         using PNaCl which is now not enabled by default)</li>
       <li><a href="vscode_api_index">VSCode API Quick Links</a></li>
       <li><a href="duane">My son Duane's stuff</a></li>
+      <li><a href="hanziquiz">Hanzi Quiz, an ancient program of mine resurrected to help Duane learn his Chinese characters</a></li>
     </ul>
   </body>
 </html>
-
-
