Use only one deck in Hanzi Quiz (not enough two-character cards to have a separate deck); fix Hanzi Quiz link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         using PNaCl which is now not enabled by default)</li>
       <li><a href="vscode_api_index">VSCode API Quick Links</a></li>
       <li><a href="duane">My son Duane's stuff</a></li>
-      <li><a href="hanziquiz">Hanzi Quiz, an ancient program of mine resurrected to help Duane learn his Chinese characters</a></li>
+      <li><a href="hanziquiz/hanziquiz.html">Hanzi Quiz, an ancient program of mine resurrected to help Duane learn his Chinese characters</a></li>
     </ul>
   </body>
 </html>
